unpackaged/main/default/objects/DRG_Analysis__c/DRG_Analysis__c.object-meta.xml
<CustomObject>
    <customHelpPage>Lower_Extremity_Help</customHelpPage>
    <description>Lower Extremity - Inpatients - 2019</description>
    <label>Lower Extremity - Inpatients - 2019</label>
    <nameField>
        <label>DRG Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lower Extremity - Inpatients - 2019</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>