unpackaged/main/default/objects/DRG_Analysis__c/fields/Average_LOS__c.field-meta.xml
<CustomField>
    <fullName>Average_LOS__c</fullName>
    <label>Average LOS</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>