unpackaged/main/default/objects/DRG_Analysis__c/fields/Avg_Est_Pmt_Claim__c.field-meta.xml
<CustomField>
    <fullName>Avg_Est_Pmt_Claim__c</fullName>
    <inlineHelpText>Average payment per claim</inlineHelpText>
    <label>Avg Est Pmt/Claim (USD)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>