unpackaged/main/default/objects/DRG_Analysis__c/fields/Case_Safe_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Id__c</fullName>
    <formula>Hospital__r.Case_Safe_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hospital ID, not DRG</inlineHelpText>
    <label>Case Safe Id</label>
    <type>Text</type>
</CustomField>