unpackaged/main/default/objects/DRG_Analysis__c/fields/DRG_Check__c.field-meta.xml
<CustomField>
    <fullName>DRG_Check__c</fullName>
    <description>For validation purposes</description>
    <label>DRG Check</label>
    <length>50</length>
    <type>Text</type>
</CustomField>