unpackaged/main/default/objects/DRG_Analysis__c/fields/DRG_Description__c.field-meta.xml
<CustomField>
    <fullName>DRG_Description__c</fullName>
    <description>DRG Description</description>
    <label>DRG Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>