unpackaged/main/default/objects/DRG_Analysis__c/fields/Est_Total_of_Claims__c.field-meta.xml
<CustomField>
    <fullName>Est_Total_of_Claims__c</fullName>
    <inlineHelpText>Total of private payor (estimated), Medicare and Medicaid claims</inlineHelpText>
    <label>Est Total # Claims</label>
    <length>50</length>
    <type>Text</type>
</CustomField>