unpackaged/main/default/objects/DRG_Analysis__c/fields/Est_Total_Pmts__c.field-meta.xml
<CustomField>
    <fullName>Est_Total_Pmts__c</fullName>
    <inlineHelpText>This is the amount paid to the hospital after negotiated discounts have been applied.  The charge submitted by the hospital to the payer is much higher.</inlineHelpText>
    <label>Est Total Pmts (USD)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>