unpackaged/main/default/objects/DRG_Analysis__c/fields/Excel_File__c.field-meta.xml
<CustomField>
    <fullName>Excel_File__c</fullName>
    <label>Excel File</label>
    <length>200</length>
    <type>Text</type>
</CustomField>