unpackaged/main/default/objects/DRG_Analysis__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <description>Hospital to which the analysis belongs</description>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DRG_Analysis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>