unpackaged/main/default/objects/DRG_Analysis__c/fields/National_Average_LOS__c.field-meta.xml
<CustomField>
    <fullName>National_Average_LOS__c</fullName>
    <label>National Average LOS</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>