unpackaged/main/default/objects/DRG_Analysis__c/fields/National_Readmission_Rate__c.field-meta.xml
<CustomField>
    <fullName>National_Readmission_Rate__c</fullName>
    <inlineHelpText>National hospital readmission rate is based on Medicare data only</inlineHelpText>
    <label>National Readmission Rate (Medicare) %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>