unpackaged/main/default/objects/DRG_Analysis__c/fields/No_of_Medicare_Claims__c.field-meta.xml
<CustomField>
    <fullName>No_of_Medicare_Claims__c</fullName>
    <label># Medicare Claims</label>
    <length>50</length>
    <type>Text</type>
</CustomField>