unpackaged/main/default/objects/DRG_Analysis__c/fields/Readmission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Readmission_Rate__c</fullName>
    <inlineHelpText>Hospital readmission rate percentage is based on Medicare data only</inlineHelpText>
    <label>Readmission Rate (Medicare) %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>