unpackaged/main/default/objects/DRG_Analysis__c/fields/Readmission_Rate_Rank_99_best__c.field-meta.xml
<CustomField>
    <fullName>Readmission_Rate_Rank_99_best__c</fullName>
    <inlineHelpText>Readmission rate percentile ranking is based on Medicare data only</inlineHelpText>
    <label>Readmission Rate Rank (99 best)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>